# cinema-fastapi

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/cinema/: main.py
src/cinema/config/: settings.py
src/cinema/core/: config.py
