[project]
name = "pj-4"
version = "0.1.0"
description = ""
authors = [
    {name = "Mike",email = "tradewcs@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.40.0,<0.41.0)",
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
